deploy: 4daf87aa25fefa13bf197ccc9670e286a0443229

--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
     </style>
     <link href="stylesheets/screen-c9d8fa83.css" rel="stylesheet" media="screen" />
     <link href="stylesheets/print-953e3353.css" rel="stylesheet" media="print" />
+    <link href="https://labs.ownlocal.com/api-docs/styles.css" rel="stylesheet" />
       <script src="javascripts/all-e033bdd3.js"></script>
 
     <script>
@@ -1707,5 +1708,6 @@ This error section is stored in a separate file in <code>includes/_errors.md</co
           </div>
       </div>
     </div>
+    <script src="https://labs.ownlocal.com/api-docs/scripts.js"></script>
   </body>
 </html>
